dokumentace, ExampleProgram, estetika doladena

--- a/ab_stromy/ab_stromy.csproj
+++ b/ab_stromy/ab_stromy.csproj
@@ -11,6 +11,8 @@
     <Title>AB Tree library</Title>
     <Authors>Tereza Písková</Authors>
     <BaseOutputPath>C:\Users\pisko\Documents\NuGet</BaseOutputPath>
+  <GenerateDocumentationFile>true</GenerateDocumentationFile>
+
   </PropertyGroup>
 
 </Project>
