--- a/ab_stromy/ab_stromy.csproj
+++ b/ab_stromy/ab_stromy.csproj
@@ -10,9 +10,9 @@
     <PackageId>ABTree</PackageId>
     <Title>AB Tree library</Title>
     <Authors>Tereza Písková</Authors>
-    <BaseOutputPath>C:\Users\pisko\Documents\NuGet</BaseOutputPath>
+    <BaseOutputPath>$(UserProfile)\.nuget\packages</BaseOutputPath>
   <GenerateDocumentationFile>true</GenerateDocumentationFile>
-  <DocumentationFile>C:\Users\pisko\source\repos\ab_stromy\docs\programmer.xml</DocumentationFile>
+  <DocumentationFile>..\docs\programmer.xml</DocumentationFile>
 
   </PropertyGroup>
 
